Update swagger route documentation
